# Falcor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_kriakr260.sh  flake.nix
cmake/toolchains/: kriakr260.cmake
common/components/: CMakeLists.txt
common/components/src/: CCameraComponent.cpp  CCameraComponent.hpp  CIOComponent.cpp  CIOComponent.hpp  ComponentSystem.cpp  ComponentSystem.hpp  Components.hpp
common/components/src/interfaces/: ICameraComponent.hpp
common/components/src/vendors/: ImplCameraComponent_DMV_SDK.cpp  ImplCameraComponent_DMV_SDK.hpp  ImplCameraComponent_Mock.cpp  ImplCameraComponent_Mock.hpp
common/core/: CMakeLists.txt
common/core/src/: Framework.hpp  Log.hpp  Logger.hpp  System.h  System.hpp
common/core/src/Network/: LocalNetwork.hpp  Socket.hpp
common/pipeline/: CMakeLists.txt
common/pipeline/src/: CPipelineComponent.cpp  CPipelineComponent.hpp  DoubleBuffer.cpp  DoubleBuffer.hpp  IPipeline.hpp  IPipelineStep.hpp  Pipeline.cpp  Pipeline.hpp  main.cpp  pipeline.cpp
common/pipeline/src/inference/: IInferenceBackend.hpp  InferenceStep.cpp  InferenceStep.hpp
common/pipeline/src/inference/backends/: VitisAIBackend.cpp  VitisAIBackend.hpp
common/pipeline/src/steps/: PassthroughStep.hpp  VitisAIStep.cpp  VitisAIStep.hpp
scripts/: env_setup_network.sh  set_Delta_Camera.sh
src/: Camera.cpp  Camera.hpp  main.cpp
